--- a/index.html
+++ b/index.html
@@ -1,79 +1,64 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sam's Fitness</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <style> .container {
+    <style>
+      body {
+        background-image: url("images/gym.jpg");
+        background-size: cover;
+        background-position: center;
+      }
+      .container {
         max-width: 800px;
         margin: 0 auto;
-      }</style>
-    <header>
-      <h1>Welcome to Sam's Fitness</h1>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <main>
-      <section>
-        <h2>Introduction</h2>
+        padding: 2rem;
+      }
+      .header {
+        text-align: center;
+        margin-bottom: 2rem;
+      }
+      .header h1 {
+        font-size: 3rem;
+        color: white;
+      }
+      .header p {
+        font-size: 1.5rem;
+        color: white;
+      }
+      .card {
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 2rem;
+        margin-bottom: 2rem;
+      }
+      .card h2 {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+      }
+      .card p {
+        font-size: 1.2rem;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Sam's Fitness</h1>
+        <p>Your Path to Fitness Starts Here</p>
+      </div>
+      <div class="card">
+        <h2>Welcome to Sam's Fitness</h2>
         <p>
-          Sam's Fitness is a world-class gym dedicated to helping you achieve your
-          fitness goals. Our state-of-the-art facilities and expert trainers are
-          here to support you every step of the way.
+          Sam's Fitness is a world-class gym dedicated to helping you achieve your fitness goals. Our state-of-the-art facilities, expert trainers, and supportive community will help you get in the best shape of your life.
         </p>
-      </section>
-      <section>
-        <h2>Testimonials</h2>
-        <p>"I've been a member of Sam's Fitness for 6 months and I've never felt better. The trainers are knowledgeable and supportive, and the facilities are top-notch." - Jane D.</p>
-      </section>
-      <section>
-        <h2>Class Schedule</h2>
-        <ul>
-          <li>Spin Class - Monday, 6pm</li>
-          <li>Yoga - Tuesday, 7am</li>
-          <li>Bootcamp - Wednesday, 6pm</li>
-          <li>Zumba - Thursday, 7pm</li>
-          <li>Pilates - Friday, 9am</li>
-        </ul>
-      </section>
-      <section>
-        <h2>Membership Offers</h2>
-        <p>Join now and get your first month free!</p>
-      </section>
-      <section>
-        <h2>Trainer Profiles</h2>
-        <ul>
-          <li>
-            <h3>John Doe</h3>
-            <p>Certified Personal Trainer with 10 years of experience.</p>
-          </li>
-          <li>
-            <h3>Jane Smith</h3>
-            <p>Nutritionist and Fitness Coach with a passion for helping others.</p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>FAQs</h2>
-        <ul>
-          <li>
-            <h3>What equipment do you have?</h3>
-            <p>We have a wide range of equipment, including treadmills, ellipticals, free weights, and resistance machines.</p>
-          </li>
-          <li>
-            <h3>Do you offer personal training?</h3>
-            <p>Yes, we have certified personal trainers on staff who can help you reach your fitness goals.</p>
-          </li>
-        </ul>
-      </section>
-    </main>
+        <p>
+          Whether you're a beginner or a seasoned athlete, we have everything you need to succeed. From weightlifting and cardio equipment to group classes and personal training, we've got you covered.
+        </p>
+        <p>
+          Join us today and start your journey to a healthier, happier you.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
