--- a/contact.html
+++ b/contact.html
@@ -1,65 +1,68 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
-    <link rel="stylesheet" href="styles.css" />
+    <style>
+      body {
+        background-image: url("images/gym.jpg");
+        background-size: cover;
+        background-position: center;
+      }
+      .container {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 2rem;
+      }
+      .header {
+        text-align: center;
+        margin-bottom: 2rem;
+      }
+      .header h1 {
+        font-size: 3rem;
+        color: white;
+      }
+      .card {
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 2rem;
+        margin-bottom: 2rem;
+      }
+      .card h2 {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+      }
+      .card p {
+        font-size: 1.2rem;
+      }
+      .map {
+        height: 300px;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
-    <header>
-      <h1>Contact Us</h1>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <main>
-      <section>
+    <div class="container">
+      <div class="header">
+        <h1>Contact Us</h1>
+      </div>
+      <div class="card">
         <h2>Get in Touch</h2>
         <p>
-          Please fill out the form below and we will get back to you as soon as
-          possible.
+          Email us at: <a href="mailto:info@samsfitness.com">info@samsfitness.com</a>
         </p>
-        <form id="contactForm">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required />
-
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="4" cols="50" required></textarea>
-
-          <input type="submit" value="Submit" />
-        </form>
-        <script src="contact.js"></script>
-      </section>
-      <section>
-        <h2>Contact Information</h2>
-        <ul>
-          <li>
-            <h3>Phone:</h3>
-            <p>555-555-5555</p>
-          </li>
-          <li>
-            <h3>Email:</h3>
-            <p><a href="mailto:info@samsfitness.com">info@samsfitness.com</a></p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Location</h2>
-        <div id="map"></div>
-        <script
-          src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
-          async
-        ></script>
-        <script src="map.js"></script>
-      </section>
-    </main>
+        <p>
+          Visit us at: <br />
+          123 Main Street <br />
+          New York, NY 10001
+        </p>
+        <p>
+          Call us at: <a href="tel:+1-555-555-5555">+1 (555) 555-5555</a>
+        </p>
+      </div>
+      <div class="map">
+        <!-- Add your map embed code here -->
+      </div>
+    </div>
   </body>
 </html>
