--- a/index.html
+++ b/index.html
@@ -61,5 +61,8 @@
         </p>
       </div>
     </div>
+    <footer>
+        <a href="contact.html">Contact Us</a>
+    </footer>
   </body>
 </html>
