--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
           Whether you're a beginner or a seasoned athlete, we have everything you need to succeed. From weightlifting and cardio equipment to group classes and personal training, we've got you covered.
         </p>
         <p>
-          Join us today and start your journey to a healthier, happier you.
+          Join us today and start your journey to a healthier, happier you. <a href="contact.html">Contact Us</a>
+
         </p>
       </div>
     </div>
-    <footer>
-        <a href="contact.html">Contact Us</a>
-    </footer>
   </body>
 </html>
