--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,7 @@
     <div class="container">
       <div class="header">
         <h1>Contact Us</h1>
+        <a href="index.html">Home</a>
       </div>
       <div class="card">
         <h2>Get in Touch</h2>
@@ -63,6 +64,7 @@
       </div>
       <div class="map">
         <!-- Add your map embed code here -->
+        <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=123%20Main%20Street%20New%20York,%20NY%2010001%20+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps devices</a></iframe></div>
       </div>
     </div>
   </body>
