--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,21 @@
         <p>
           Call us at: <a href="tel:+1-555-555-5555">+1 (555) 555-5555</a>
         </p>
+        <section>
+            <h2>Send a Message</h2>
+            <form id="contactForm">
+                <label for="name">Name:</label>
+                <input type="text" id="name" required>
+                <br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" required>
+                <br>
+                <label for="message">Message:</label>
+                <textarea id="message" required></textarea>
+                <br>
+                <button type="submit">Send</button>
+            </form>
+        </section>
       </div>
       <div class="map">
         <!-- Add your map embed code here -->
