--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       }
       .header h1 {
         font-size: 3rem;
-        color: white;
+        color: rgb(0, 0, 0);
       }
       .header p {
         font-size: 1.5rem;
