--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       }
       .header p {
         font-size: 1.5rem;
-        color: rgb(0, 0, 0)5);
+        color: rgb(0, 0, 0)5;
       }
       .card {
         background-color: rgba(255, 255, 255, 0.8);
