--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
       }
       .header h1 {
         font-size: 3rem;
-        color: white;
+        color: rgb(0, 0, 0);
       }
       .card {
         background-color: rgba(255, 255, 255, 0.8);
